# MISESmartsheetAPI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MISE_Codex_Prompt_Book.docx  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
MISE_Codex_Pilot_API_Prompt_Package/: .env.example  MANIFEST.txt  MISE_Codex_Prompt_Book.md  README.md
MISE_Codex_Pilot_API_Prompt_Package/codex/: AGENTS.md
MISE_Codex_Pilot_API_Prompt_Package/docs/: ACCEPTANCE_CRITERIA.md  CODEX_USAGE_GUIDE.md  DATA_MODEL.md  DEPLOYMENT_CHECKLIST.md  RISK_GATES.md  TIR_WORKFLOW_MAPPING.md
MISE_Codex_Pilot_API_Prompt_Package/prompts/: 00_MASTER_SEQUENCE.md  01_repository_scaffold.md  02_environment_security_baseline.md  03_project_configuration_and_settings.md  04_logging_and_audit_foundation.md  05_smartsheet_client_read_only.md  06_cli_foundation.md  07_mise_organization_domain_model.md  08_tir_schema_and_column_mapping.md  09_database_models_and_migrations.md  10_smartsheet_tir_pull.md  11_filesystem_discovery.md  12_reconciliation_engine.md  13_export_reporting_outputs.md  14_fastapi_read_api.md  15_data_quality_and_validation.md  16_scheduler_polling_service.md  17_webhook_receiver_optional.md  18_dry_run_planner.md  19_safe_project_folder_creation.md  20_smartsheet_write_back_safe.md  21_attachment_handling.md  22_blueprint_parser.md  23_department_reporting_tables.md  27_pilot_rollout_abed.md  (+6 more)
alembic/: env.py
app/: __init__.py  config.py  main.py
docs/: HANDOVER_NOTES.md  OPERATIONS_RUNBOOK.md  PILOT_ACCEPTANCE_TEST_PLAN.md  SECURITY_REVIEW_CHECKLIST.md
scripts/: run_local.sh  smoke_health.py  test_local.sh
tests/: test_abed_pilot_blueprint.py  test_api_read.py  test_attachment_handling.py  test_audit.py  test_auth.py  test_blueprint_parser.py  test_cli.py  test_config.py  test_data_quality_service.py  test_database.py  test_dry_run_planner.py  test_filesystem_discovery.py  test_organization.py  test_polling_service.py  test_project_folder_creation.py  test_reconciliation_service.py  test_redaction.py  test_report_export_service.py  test_reporting_snapshot_service.py  test_smartsheet_client.py  test_smartsheet_write_back.py  test_tir_mapping.py  test_tir_pull_service.py  test_webhooks.py
(+49 files in other folders)
