[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mise-smartsheet-integration"
version = "0.1.0"
description = "MISE Smartsheet Integration Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "typer",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "pandas",
    "openpyxl",
    "python-dotenv",
    "pyyaml",
    "tenacity",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "respx",
    "ruff",
    "mypy",
]

[project.scripts]
mise-smartsheet = "app.cli.main:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
packages = ["app"]
strict = true
