[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mise-smartsheet-integration"
version = "0.1.0"
description = "MISE Smartsheet Integration Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "typer",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "pandas",
    "openpyxl",
    "python-dotenv",
    "pyyaml",
    "tenacity",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "respx",
    "ruff",
    "mypy",
]

[project.scripts]
mise-smartsheet = "app.cli.main:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
packages = ["app"]
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 50
show_missing = true
skip_covered = true
exclude_lines = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
